@@ -29,15 +29,17 @@ namespace Digikam
 PreviewSettings::PreviewSettings(Quality quality, RawLoading rawLoading)
     : quality(quality),
       rawLoading(rawLoading),
-      zoomOrgSize(true)
+      zoomOrgSize(true),
+      convertToEightBit(true)
 {
 }
 
 bool PreviewSettings::operator==(const PreviewSettings& other) const
 {
-    return (quality     == other.quality &&
-            rawLoading  == other.rawLoading &&
-            zoomOrgSize == other.zoomOrgSize);
+    return (quality           == other.quality &&
+            rawLoading        == other.rawLoading &&
+            zoomOrgSize       == other.zoomOrgSize &&
+            convertToEightBit == other.convertToEightBit);
 }
 
 }   // namespace Digikam
